--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <div>
+    <img src="C:\Users\Korisnik\Downloads\fulllogo_transparent.png">
+    </div>
+    <title>
+      Create your own <span style="color:7C4DFF">style</span>
+    </title>
+    <div>
+      <h>HD Wallpapers</h>
+      <h1>
+      Choose from the highest quality selection of high-definition wallpapers–all submitted by our talented community of contributors. Free to download and use for your mobile and desktop screens.
+    </h1>
+  </div>
+  <div>
+    <h2 class="start_btn">Start your own journey</h2>
+  </div>
+  </head>
+  <body>
+    
+  </body>
+</html>
 
