--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <img src="C:\Users\Korisnik\Downloads\fulllogo_transparent.png">
     </div>
     <title>
-      Create your own <span style="color:7C4DFF">style</span>
+      Create your own <span>style</span>
     </title>
     <div>
       <h>HD Wallpapers</h>
