--- a/index.html
+++ b/index.html
@@ -22,3 +22,12 @@
   </body>
 </html>
 
+<ul class="categories">
+  <li><a herf="/category/nature">NATURE</color></a></li>
+  <li><a herf="/category/animals">ANIMALS</a></li>
+  <li><a herf="/category/city">CITY</a></li>
+  <li><a herf="/category/anime">ANIME</a></li>
+  <li><a herf="/category/fantasy">FANTASY</a></li>
+  <li><a herf="/category/cars">CARS</a></li>
+</ul>
+
