Update index.html vojin,kategorije

--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
   </div>
   </head>
   <body>
-    
-  </body>
-</html>
-
-<ul class="categories">
+    <div class ="dugmicikategorije1">
+      <div class="nature_btn"></div>
+      <div class="fantasy_btn"></div>
+      <div class="animals_btn"></div>
+      </div>
+    </div class ="dugmicikategorija2">
+    <div class="anime_btn"></div>
+      <div class="city_btn"></div>
+      <div class="cars_btn"></div>
+      </div>
+    <ul class="categories">
   <li><a herf="/category/nature">NATURE</color></a></li>
   <li><a herf="/category/animals">ANIMALS</a></li>
   <li><a herf="/category/city">CITY</a></li>
@@ -30,4 +36,8 @@
   <li><a herf="/category/fantasy">FANTASY</a></li>
   <li><a herf="/category/cars">CARS</a></li>
 </ul>
+  </body>
+</html>
+
+
 
