Update index.html kategorije i footer

--- a/index.html
+++ b/index.html
@@ -19,23 +19,20 @@
   </head>
   <body>
     <div class ="dugmicikategorije1">
-      <div class="nature_btn"></div>
-      <div class="fantasy_btn"></div>
-      <div class="animals_btn"></div>
+      <div class="nature_btn"><p>NATURE</p></div>
+      <div class="fantasy_btn"><p>FANTASY</p></div>
+      <div class="animals_btn"><p>ANIMALS</p></div>
       </div>
-    </div class ="dugmicikategorija2">
-    <div class="anime_btn"></div>
-      <div class="city_btn"></div>
-      <div class="cars_btn"></div>
+    <div class ="dugmicikategorija2">
+    <div class="anime_btn"><p>ANIME</p></div>
+      <div class="city_btn"><p>CITY</p></div>
+      <div class="cars_btn"><p>CARS</p></div>
       </div>
-    <ul class="categories">
-  <li><a herf="/category/nature">NATURE</color></a></li>
-  <li><a herf="/category/animals">ANIMALS</a></li>
-  <li><a herf="/category/city">CITY</a></li>
-  <li><a herf="/category/anime">ANIME</a></li>
-  <li><a herf="/category/fantasy">FANTASY</a></li>
-  <li><a herf="/category/cars">CARS</a></li>
-</ul>
+      <div class="footer">
+    <div class="feedback">Feedback</div>
+    <div class="madeby">made by: Algoteam</div>
+    <div class="contact">Contact</div>
+  </div>
   </body>
 </html>
 
