Ispravka lokacije hero sekcije u fajlu index.html

--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <div>
-    <img src="C:\Users\Korisnik\Downloads\fulllogo_transparent.png">
-    </div>
-    <title>
-      Create your own <span>style</span>
-    </title>
-    <div>
-      <h>HD Wallpapers</h>
-      <h1>
-      Choose from the highest quality selection of high-definition wallpapers–all submitted by our talented community of contributors. Free to download and use for your mobile and desktop screens.
-    </h1>
-  </div>
-  <div>
-    <h2 class="start_btn">Start your own journey</h2>
-  </div>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HD Wallpapers</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+  
+  
+  
   <body>
+
+      <!-- Hero sekcija -->
+  <section class="hero">
+    <div class="hero-content">
+      <h2>HD Wallpapers</h2>
+      <p>
+        Choose from the highest quality selection of high-definition wallpapers—all submitted by our talented community of contributors. 
+        Free to download and use for your mobile and desktop screens.
+      </p>
+      <button class="hero-btn">Start my journey</button>
+    </div>
+  </section>
+    
     <div class ="dugmicikategorije1">
       <div class="nature_btn"><p>NATURE</p></div>
       <div class="fantasy_btn"><p>FANTASY</p></div>
