Update header sekcija

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
   
   <body>
+     <!-- Header -->
+  <header class="header">
+    <h1 class="header-title">Create your own <span>style</span></h1>
+    <div class="logo">
+      <img src="logo.png" alt="Logo">
+    </div>
+  </header>
 
     
 
