Update index.html added on click

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   </section>
     
     <div class ="dugmicikategorije1">
-      <div class="nature_btn"><p>NATURE</p></div>
-      <div class="fantasy_btn"><p>FANTASY</p></div>
-      <div class="animals_btn"><p>ANIMALS</p></div>
+      <div class="nature_btn" onclick="location.href='nature.html'"><p>NATURE</p></div>
+      <div class="fantasy_btn" onclick="location.href='fantasy.html'" ><p>FANTASY</p></div>
+      <div class="animals_btn" onclick="location.href='animals.html'"><p>ANIMALS</p></div>
       </div>
     <div class ="dugmicikategorija2">
-    <div class="anime_btn"><p>ANIME</p></div>
-      <div class="city_btn"><p>CITY</p></div>
-      <div class="cars_btn"><p>CARS</p></div>
+    <div class="anime_btn" onclick="location.href='anime.html'"><p>ANIME</p></div>
+      <div class="city_btn" onclick="location.href='city.html'"><p>CITY</p></div>
+      <div class="cars_btn" onclick="location.href='cars.html'"><p>CARS</p></div>
       </div>
       <div class="footer">
     <div class="feedback">Feedback</div>
