--- a/nature.html
+++ b/nature.html
@@ -15,6 +15,7 @@
       <img src="logo.png" alt="Logo">
     </div>
   </header>
+    <h1 class="naslov1">Nature</h1>
     <div class ="dugmicikategorije1">
       <div class="nature_pic1"></div>
       <div class="nature_pic2"></div>
