--- a/fantasy.html
+++ b/fantasy.html
@@ -15,6 +15,7 @@
       <img src="logo.png" alt="Logo">
     </div>
   </header>
+    <h1 class="naslov2">Fantasy</h1>
     <div class ="dugmicikategorije5">
       <div class="fantasy_pic1"></div>
       <div class="fantasy_pic2"></div>
