--- a/animals.html
+++ b/animals.html
@@ -15,6 +15,7 @@
       <img src="logo.png" alt="Logo">
     </div>
   </header>
+    <h1 class="naslov3">Animals</h1>
     <div class ="dugmicikategorije7">
       <div class="animals_pic1"></div>
       <div class="animals_pic2"></div>
