--- a/anime.html
+++ b/anime.html
@@ -15,6 +15,7 @@
       <img src="logo.png" alt="Logo">
     </div>
   </header>
+    <h1 class="naslov4">Anime</h1>
     <div class ="dugmicikategorije9">
       <div class="anime_pic1"></div>
       <div class="anime_pic2"></div>
